--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-  "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
-  "homepage": "https://github.com/Vitalina-Yefimova/currency-converter-react",
   "dependencies": {
     "@tailwindcss/vite": "^4.0.1",
     "react": "^18.3.1",
@@ -27,7 +25,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
